# Handshake

./: .claude  .gitattributes  .github  .gitignore  AGENTS.md  CLAUDE.md  GOV_KERNEL_ONLY.md  Handshake Codex v0.5.md  Handshake Codex v0.7.md  Handshake Codex v0.8.md  Handshake Codex v1.4.md  Handshake workflow.md  Handshake_Codex_v0.5.md  Handshake_Master_Spec_v02.100.md  Handshake_Master_Spec_v02.101.md  Handshake_Master_Spec_v02.102.md  Handshake_Master_Spec_v02.103.md  Handshake_Master_Spec_v02.104.md  Handshake_Master_Spec_v02.105.md  Handshake_Master_Spec_v02.106.md  Handshake_Master_Spec_v02.107.md  Handshake_Master_Spec_v02.108.md  Handshake_Master_Spec_v02.109.md  Handshake_Master_Spec_v02.110.md  Handshake_Master_Spec_v02.111.md  Handshake_Master_Spec_v02.112.md  Handshake_Master_Spec_v02.113.md  Handshake_Master_Spec_v02.115.md  Handshake_Master_Spec_v02.116.md  Handshake_Master_Spec_v02.117.md  Handshake_Master_Spec_v02.118.md  Handshake_Master_Spec_v02.119.md  Handshake_Master_Spec_v02.12  Handshake_Master_Spec_v02.12.md  Handshake_Master_Spec_v02.120.md  Handshake_Master_Spec_v02.121.md  Handshake_Master_Spec_v02.122.md  Handshake_Master_Spec_v02.123.md  Handshake_Master_Spec_v02.124.md  Handshake_Master_Spec_v02.125.md  (+86 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/resources/: THIRD_PARTY_NOTICES.json
app/src-tauri/src/: fonts.rs  foreground_exception_window.rs  foreground_warning.rs  inspector.rs  lib.rs  manual.rs  quiet_window.rs  session_chat_log.rs  swarm.rs  visual_debug.rs
app/src-tauri/src/commands/: caa.rs  cli_bridge_config.rs  cli_bridge_store.rs  cloud_lane.rs  distillation.rs  focus_audit.rs  foreground_exception.rs  kv_cache.rs  lora.rs  memory_calibration.rs  memory_capsule.rs  memory_pin.rs  model_runtime.rs  peft.rs  refusal.rs  sandbox.rs  self_improve.rs  session_distill.rs  session_transcript.rs  spawn_template_store.rs  speculative.rs  stealth_ref.rs  steering.rs  subquadratic.rs  swarm_runtime.rs  swarm_schedule.rs  swarm_schedule_store.rs  terminal.rs  testing.rs  visual_debugger.rs
src/backend/handshake_core/: .gitignore  Cargo.toml  build.rs  mechanical_engines.json
src/backend/handshake_core/.sqlx/: dev.db  query-00c59cf027953262ca04df335535eaa24bfe3ae0ea3337e94557248111191d46.json  query-014ef8c6134b3f4471ee671817a978074b19faafa769f066accf4d764643cc0a.json  query-01d86f919cdd331a2a05850fbf986323f94d2b088c8482465969a41f73d5a04f.json  query-059f183d85ad4e20e7c0c8ca63acfe26f806728fd518c57a6178e9bd1f77b8af.json  query-07965e1b31319214378c2dd24812bd971bfa3cc6fedeabacb2fac2df2ab85efb.json  query-095729d2eb33063de1f708a8913a35ffd008fc8e51d72554b8b46c7ef4177f20.json  query-0afefec2f0a418655cc0d58bdb89856f0564e5934d445cb9a5c9a5be49aa0e98.json  query-0ec236c67df46e2946e4c91f90907d2ae09d67c22469a656fa5356a1943d3d70.json  query-0fbc7c051d4b3c7aaafe124f3fc04d3af13587bd705b09c5b69794213dbdf60a.json  query-146e4eb91c01b846ba9e3ffcf7e360e4bbad6a6162098e7f6e7aa7c6d2856fc2.json  query-1520f3e49e0b87a59bdf609eb0d335a6d91bbdc9bd850038c909c9d37813aa21.json  query-18cc1a3d12ba553bf435a4c6455d0b331196aa95b3abed001fd3e7a14f7ab83a.json  query-190402725697180e16f3383a21c558512f511c7f642d9d13016bf76c90d9a6fb.json  query-20a5f019ca56f0ca94a6eece13f050c4315b2b41adc6f65f91cab147445750ac.json  query-277d4f396e7a940d33f2903a05610a0e0caaea4062566813102a57b11dcae388.json  query-288620813036d55ff86030d609f979083873e579e1cdf0d5f8abe7dbdf6dfadd.json  query-2b636a09ab31f279a508f7ca86e56201c62c554deba6c16761e9978b235a6dff.json  query-371592172bfefa8c96c48e99b5032de355ef8b6cb779edeabe2e29e36e7571de.json  query-374e08f287cc3183a4128658700b01246ccaf2c6282bbba34ea318ff1499d780.json  query-3a4d13874245944429bafa08d719b9dcaf920ca8a356049ccc276fa628da796f.json  query-3d2aeca57dfeb837d81bc97b3ac3654da347315bb9a9d70efb6c3052037d43c0.json  query-4302cf7120f55a2988276ed970a4fb18ecc9578851c995ff81aa35b4d1214393.json  query-4619680b194e09788f8b6183aaf5b6bf13723500d675014295ffa96bedc932d2.json  query-4cf180ba6abb5246febcdf609662fcc1d08b750a5c7a8cf9131bff6f7544bb11.json  query-4d86e5dfec79c3a1160c75530c205ec0f0c17e72e4ba47b7610f5495b68589dd.json  query-50e42e2d1c46da824db2e264118c622fbbfbd001b74995aa74300a04da51c129.json  query-542b4295dc0ecc3feaa14ef90fb0a99041455b0b3fcd50f8e0fff36a60bd71df.json  query-5741f7c645f8786259a5eafb3df0225f21e0825d87010b8fab2ddc14f8a23b0e.json  query-5bb844805a39ba1f1237cb0877e9a5e39642051bf8543e944fddbeb7e0c5393c.json  query-5be8932f34d79b88605b8ca7523c02c26ae2db8ba2cdf5afd79512c98ae395ad.json  query-5d2a0b569ea81015b2849184add5837a9ae17af773306e35aa5b6765514c8a1e.json  query-5e14f632adcd99f181fc22b801a13a0633112ef600f1934831cd0e98150bb366.json  query-61003a77ad1afbf6d8c81ff45f69f5d3cbaa2fc6c04a588ee0e8c7916e56254c.json  query-62447b20ff3ff23b79f43d61cec44f92361e8586ab9aa9d9a265ba19ad6965dc.json  query-660564921bf169d7355b724614f213f71f5aa77e46ca171df7ba1f125a233877.json  query-68d45ffa9593e106c0892663a79e9c3facc3a2f1c8a71c8815f0d97647215534.json  query-69c0290c4d58bb3bf03ee5cec9c1c6ceac3b5506eb98b45a3caf9ad52eb0eb08.json  query-6aab1534a7bd15cab44d60cf2962ee16a47b80335e74ea003d6c2989b0233487.json  query-6c4ea0d026462bd6ca743f04be3467354a436cf715e24d185f389afdba01076d.json  (+44 more)
src/backend/handshake_core/migrations/: 0001_init.down.sql  0001_init.sql  0002_create_ai_core_tables.down.sql  0002_create_ai_core_tables.sql  0003_add_is_pinned.down.sql  0003_add_is_pinned.sql  0004_mutation_traceability.down.sql  0004_mutation_traceability.sql  0005_add_canvas_traceability.sql  0006_expand_ai_job_model.down.sql  0006_expand_ai_job_model.sql  0007_workflow_persistence.down.sql  0007_workflow_persistence.sql  0008_expand_ai_job_model.down.sql  0008_expand_ai_job_model.sql  0009_add_block_classification.down.sql  0009_add_block_classification.sql  0010_normalize_ai_job_kind.down.sql  0010_normalize_ai_job_kind.sql  0011_normalize_micro_task_execution.down.sql  0011_normalize_micro_task_execution.sql  (+281 more)
src/frontend/handshake_native/: .gitignore  Cargo.toml  build.rs  clippy.toml
src/frontend/palmistry/: Cargo.toml
src/frontend/toolkit_spike/: Cargo.toml
(+7409 files in other folders)
