[package]
name = "handshake_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "handshake_core"
path = "src/main.rs"
required-features = ["app-runtime"]

[[bin]]
name = "capability_registry_workflow"
path = "src/bin/capability_registry_workflow.rs"
required-features = ["app-runtime"]

[[bin]]
name = "handshake"
path = "src/bin/handshake.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "migrate", "chrono"] }
uuid = { version = "1", features = ["v7", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
thiserror = "2.0.17"
duckdb = { version = "1.4.3", optional = true, features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
once_cell = "1.20"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
unicode-normalization = "0.1"
idna = "1"
caseless = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tiktoken-rs = { version = "0.5", optional = true }
# Disable the esaxx default feature to avoid static CRT conflicts on Windows.
tokenizers = { version = "0.15", optional = true, default-features = false, features = ["onig", "progressbar"] }
regex = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
jsonschema = "0.17"

[dev-dependencies]
tempfile = "3"

[features]
default = ["runtime-full"]
kernel-runtime = []
runtime-full = ["kernel-runtime", "tokenization"]
kernel-proof = ["runtime-full"]
app-runtime = ["runtime-full", "duckdb-flight-recorder"]
duckdb-flight-recorder = ["dep:duckdb"]
tokenization = ["dep:tiktoken-rs", "dep:tokenizers"]
test-utils = []  # Exposes test helper utilities for integration tests

[[test]]
name = "ai_ready_data_arch_tests"
path = "tests/ai_ready_data_arch_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "mcp_e2e_tests"
path = "tests/mcp_e2e_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "mcp_gate_tests"
path = "tests/mcp_gate_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "mex_tests"
path = "tests/mex_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "micro_task_executor_tests"
path = "tests/micro_task_executor_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "model_session_scheduler_tests"
path = "tests/model_session_scheduler_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "role_mailbox_tests"
path = "tests/role_mailbox_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "role_registry_append_only_tests"
path = "tests/role_registry_append_only_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "runtime_chat_events_tests"
path = "tests/runtime_chat_events_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "terminal_guards_tests"
path = "tests/terminal_guards_tests.rs"
required-features = ["duckdb-flight-recorder"]

[[test]]
name = "terminal_session_tests"
path = "tests/terminal_session_tests.rs"
required-features = ["duckdb-flight-recorder"]
